[package]

name = "d3cap"
version = "0.0.1"
authors = [ "jfager@gmail.com" ]


[[bin]]

name = "d3cap"
path = "src/d3cap/main.rs"


[dependencies.pcap]

path = "src/pcap"


[dependencies.multicast]

path = "src/multicast"


[dependencies.json_serve]

path = "src/json_serve"


[dependencies.toml]

git = "https://github.com/alexcrichton/toml-rs.git"
